--- a/src/main/resources/templates/inmueble.html
+++ b/src/main/resources/templates/inmueble.html
@@ -4,6 +4,10 @@
 <title>Inmueble</title>
 </head>
 <body>
-  <h2 th:text="${inmueble.direccion}"></h2>
+  <h2 >
+    <tr th:each="i: ${inmueble}">
+      <td th:text="${i.direccion}"></td><br/>
+    </tr>
+  </h2>
 </body>
 </html>
