--- a/src/main/resources/templates/cargarInmueble.html
+++ b/src/main/resources/templates/cargarInmueble.html
@@ -7,30 +7,30 @@
 <body>
 	<h2>Carga de Datos del Inmueble</h2>
 	<div class="container">
-		<form action="/registracion/alquiler" method="post">
+		<form th:action="@{/cargarInmueble}" th:object="${inmueble}" method="post">
 	    <div>
 	        <label>Direccion: </label>
-	        <input type="text" th:field="{direccion}"/>
+	        <input type="text" th:field="*{direccion}"/>
 	    </div>
 	    <div>
 	        <label>Detalles Legales: </label>
-	        <input type="text" th:field="{detallesLegales}"/>
+	        <input type="text" th:field="*{detallesLegales}"/>
 	    </div>
 			<div>
 	        <label>Detalles del Inmueble: </label>
-	        <input type="text" th:field="{detallesInmueble}"/>
+	        <input type="text" th:field="*{detallesInmueble}"/>
 	    </div>
 			<div>
 	        <label>Otros Detalles: </label>
-	        <input type="text" th:field="otrosDetalles"/>
+	        <input type="text" th:field="*{otrosDetalles}"/>
 	    </div>
 			<div>
 	        <label>Precio $: </label>
-	        <input type="text" th:field="{precio}"/>
+	        <input type="text" th:field="*{precio}"/>
 	    </div>
 			<div>
 	        <label>Tipo del Inmueble: </label>
-	        <input type="text" th:field="tipoInmueble"/>
+	        <input type="text" th:field="*{tipoInmueble}"/>
 	    </div>
 			<div>
 	        <button type="submit">Registrar...</button>
